syntax = "proto3";

package rating.user.v1;

option go_package = "github.com/dduzgun-security/jug/jug-model/jug-model-go/rating/user/v1;userv1";
option java_package = "com.rating.user.v1";
option java_multiple_files = true;

message User {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    uint32 age = 4;
    string phone_number = 5;
    string status = 6;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}